# mprpc

./: CMakeLists.txt
example/callee/: userservice.cc
src/: mprpcapplication.cc  mprpcconfig.cc  rpcprovider.cc
src/include/: mprpcapplication.h  mprpcconfig.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.proto
